<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_total"
        android:textSize="24dp"/>
    
    <EditText
        android:id="@+id/edtTotal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView 
        android:id="@+id/txtNroParticipantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nroparticipantes"
        android:textSize="24dp"/>
    
    <EditText 
        android:id="@+id/edtNroParticipantes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    
    <CheckBox 
        android:id="@+id/chkGarcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/txt_garcon"
        android:textSize="24dp"/>
    
    <TextView 
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <RelativeLayout 
        android:id="@+id/botoes"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" >
	    
	    <Button 
	        android:id="@+id/btnCalcular"
	        android:layout_width="103dp"
	        android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnItens"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
	        android:text="@string/btn_calcular"/>
	    
        <Button
            android:id="@+id/btnItens"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_itens" />
	    	    
	    <Button
	        android:id="@+id/btnLimpar"
	        android:layout_width="103dp"
	        android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnItens"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
	        android:text="@string/btn_limpar" />
        
    </RelativeLayout>
</LinearLayout>
